tests/fixtures/positive/style/ForbiddenComment.kt
package style

// TODO: fix this
fun example() {
    // FIXME: broken logic
    println("hello")
}
