tests/fixtures/negative/comments/EndOfSentenceFormat.kt
package comments

/** This does something. */
fun doSomething() {
    println("hello")
}
